--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,78 @@
 .App {
   text-align: center;
+  margin: 20px;
+}
+.add-btn{
+  background-color: rgb(39, 39, 232);
+  border-radius: 4px;
+  margin-left:  10px;
+  margin-bottom: 10px;
+  height: 45px;
+  width: 90px;
+  color: aliceblue;
+  font-size: 20px;
+  box-sizing: content-box;
+}
+.add-btn:hover{
+  background-color: rgb(4, 232, 0);
+  border-radius: 4px;
+  margin-left:  10px;
+  margin-bottom: 10px;
+  height: 45px;
+  width: 90px;
+  color: aliceblue;
+  font-size: 20px;
+  box-sizing: content-box;
+}
+.in-text{
+  box-sizing: content-box;
+  height: 45px;
+  background-color: rgb(241, 238, 234);
+  border-style: none;
+
+}
+.check{
+  margin: auto;
+}
+.delete-btn{
+  background-color: black;
+  color: aliceblue;
+  border-style: none;
+  border-radius: 4px;
+  margin: auto;
+  height: 30px;
+  width: 70px;
+}
+.delete-btn:hover{
+  background-color: rgb(224, 17, 17);
+  color: aliceblue;
+  border-style: none;
+  border-radius: 4px;
+  margin: auto;
+  height: 30px;
+  width: 70px;
+}
+.container{
+  margin: 10px;
+  width: 300px;
+  margin:auto
+  
+}
+.raws{
+  width: 300px;
+  background-color: bisque;
+  margin: 5px auto;
+  border-radius: 10px;
+  justify-content: space-around;
+  display: flex;
+  padding: 5px;
+}
+.spanContainer{
+  width: 100px;
+  word-break: break-all;
+  padding: 1px; 
+}
+.camaleon{
+  height: 70px;
+  margin: 5px;
 }
